--- a/index.scss
+++ b/index.scss
@@ -182,6 +182,21 @@ ul.range-scale {
     }
 }
 
+// Shared styling for the following .match-list
+@mixin positioning-for-bounds($bounds) {
+    @if $bounds == false { // query doesn't apply with this range -> hide range marker
+        display: none;
+    } @else if $bounds == true { // query always applies -> show 100%
+        left: 0;
+        width: 100%;
+    } @else { // query applies over a specific range
+        $left:  if(nth($bounds, 1), nth($bounds, 1), 0px);
+        $width: if(nth($bounds, 2), nth($bounds, 2) - $left, $scaleWidth - $left);
+        width:  $width * 100% / $scaleWidth;
+        left:   $left * 100% / $scaleWidth;
+    }
+}
+
 // Produces highlights for a preceding .range-scale, for the named query types
 ul.match-list {
     width: $visuWidth;
@@ -201,17 +216,7 @@ ul.match-list {
             @include viewports($range) {
                 .query-#{$queryType} {
                     $bounds: nth(resolve-query($queryType, $range), 1);
-                    @if $bounds == false { // query doesn't apply with this range -> hide range marker
-                        display: none;
-                    } @else if $bounds == true { // query always applies -> show 100%
-                        left: 0;
-                        width: 100%;
-                    } @else { // query applies over a specific range
-                        $left:  if(nth($bounds, 1), nth($bounds, 1), 0px);
-                        $width: if(nth($bounds, 2), nth($bounds, 2) - $left, $scaleWidth - $left);
-                        width:  $width * 100% / $scaleWidth;
-                        left:   $left * 100% / $scaleWidth;
-                    }
+                    @include positioning-for-bounds($bounds);
                 }
             }
         }
@@ -224,17 +229,7 @@ ul.match-list {
             @for $i from 1 to length($boundsList) + 1 {
                 .query-not:nth-child(#{$i}) {
                     $bounds: nth($boundsList, $i);
-                    @if $bounds == false { // query doesn't apply with this range -> hide range marker
-                        display: none;
-                    } @else if $bounds == true { // query always applies -> show 100%
-                        left: 0;
-                        width: 100%;
-                    } @else { // query applies over a specific range
-                        $left:  if(nth($bounds, 1), nth($bounds, 1), 0px);
-                        $width: if(nth($bounds, 2), nth($bounds, 2) - $left, $scaleWidth - $left);
-                        width:  $width * 100% / $scaleWidth;
-                        left:   $left * 100% / $scaleWidth;
-                    }
+                    @include positioning-for-bounds($bounds);
                 }
             }
         }
