--- a/test/spec/among-2.scss
+++ b/test/spec/among-2.scss
@@ -2,7 +2,7 @@
 
 /* it produces the correct media query for the lowest range */
 
-@include viewports('tiny') {
+@include viewports(tiny) {
     p { color: red; }
 }
 
