--- a/test/spec/among-4.scss
+++ b/test/spec/among-4.scss
@@ -2,7 +2,7 @@
 
 /* it handles a simple "among" query */
 
-@include viewports(among 'small') {
+@include viewports(among small) {
     p { color: red; }
 }
 
