--- a/test/spec/not-1.scss
+++ b/test/spec/not-1.scss
@@ -2,7 +2,7 @@
 
 /* it handles a "not" query for a single range */
 
-@include viewports('not' 'small') {
+@include viewports('not' small) {
     p { color: red; }
 }
 
