--- a/test/spec/not-2.scss
+++ b/test/spec/not-2.scss
@@ -2,7 +2,7 @@
 
 /* it handles a "not" query for consecutive ranges */
 
-@include viewports('not' 'small' 'medium') {
+@include viewports('not' small medium) {
     p { color: red; }
 }
 
