--- a/test/spec/not-3.scss
+++ b/test/spec/not-3.scss
@@ -2,7 +2,7 @@
 
 /* it handles a "not" query including the lowest range */
 
-@include viewports('not' 'tiny' 'medium') {
+@include viewports('not' tiny medium) {
     p { color: red; }
 }
 
