--- a/test/spec/up-to-2.scss
+++ b/test/spec/up-to-2.scss
@@ -2,7 +2,7 @@
 
 /* it handles an "up-to" query to the highest range */
 
-@include viewports(up-to 'large') {
+@include viewports(up-to large) {
     p { color: red; }
 }
 
